integrates\feat(front): #2325.1 make tables responsive
- Fix findings table
- Fix drafts table
- Fix secdevops table
- Fix vulnerabilities table

Closes #2345


Former-commit-id: 307f2fcdcd3e44ee401433d2e5186f00c57d85c6

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -1,5 +1,13 @@
-:local .tableWrapper {
-  overflow-x: auto;
+:local .borderNone {
+  border: none;
+}
+
+:local .wFull {
+  width: 100%;
+}
+
+:local .tableWrapper table {
+  table-layout: auto !important;
 }
 
 :local .tableHeader > th,
@@ -18,7 +26,6 @@
 :local .tableHeader > th {
   text-align: center !important;
   vertical-align: middle !important;
-  white-space: unset !important;
   font-weight: 400;
 }
 
